unpackaged/main/default/objects/PotentielMeubles__c/PotentielMeubles__c.object-meta.xml
<CustomObject>
    <label>Potentiel Meubles</label>
    <nameField>
        <displayFormat>GF-PMB-{0000000000}</displayFormat>
        <label>Identifiant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potentiel Meubles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>