unpackaged/main/default/objects/PotentielMeubles__c/fields/CategorieProduit__c.field-meta.xml
<CustomField>
    <fullName>CategorieProduit__c</fullName>
    <label>Catégorie Produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARM PV</fullName>
            </value>
            <value>
                <fullName>BAC 100</fullName>
            </value>
            <value>
                <fullName>BAC 150</fullName>
            </value>
            <value>
                <fullName>BAC 200</fullName>
            </value>
            <value>
                <fullName>BAC SERVA</fullName>
            </value>
            <value>
                <fullName>TRAIT 100</fullName>
            </value>
            <value>
                <fullName>TRAIT 130</fullName>
            </value>
            <value>
                <fullName>VITR 050</fullName>
            </value>
            <value>
                <fullName>VITR 070</fullName>
            </value>
            <value>
                <fullName>VITR 090</fullName>
            </value>
            <value>
                <fullName>VITR 100</fullName>
            </value>
            <value>
                <fullName>VITR 120</fullName>
            </value>
            <value>
                <fullName>VITR 130</fullName>
            </value>
            <value>
                <fullName>VITR 190</fullName>
            </value>
            <value>
                <fullName>VITR SV 070</fullName>
            </value>
            <value>
                <fullName>VITR SV 100</fullName>
            </value>
            <value>
                <fullName>VITR SV 130</fullName>
            </value>
            <value>
                <fullName>VITR SV 155</fullName>
            </value>
            <value>
                <fullName>AUTRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>