unpackaged/main/default/objects/PotentielMeubles__c/fields/Classement__c.field-meta.xml
<CustomField>
    <fullName>Classement__c</fullName>
    <inlineHelpText>A: le produit est utilisé très souvent
B: le produit est utilisé régulièrement 
C: le produit est utilisé en saison uniquement
D: le produit n’est quasiment pas utilisé</inlineHelpText>
    <label>Classement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>