unpackaged/main/default/objects/PotentielMeubles__c/fields/CompteRaisonSociale__c.field-meta.xml
<CustomField>
    <fullName>CompteRaisonSociale__c</fullName>
    <label>Compte (Raison Sociale)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Potentiel Meubles</relationshipLabel>
    <relationshipName>PotentielMeubles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>