unpackaged/main/default/objects/PotentielMeubles__c/fields/Financement__c.field-meta.xml
<CustomField>
    <fullName>Financement__c</fullName>
    <label>Financement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autofinancement</fullName>
            </value>
            <value>
                <fullName>Crédit-Bail</fullName>
            </value>
            <value>
                <fullName>Emprunt Bancaire</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>