unpackaged/main/default/objects/PotentielMeubles__c/fields/MarqueCarrosserie__c.field-meta.xml
<CustomField>
    <fullName>MarqueCarrosserie__c</fullName>
    <label>Marque Carrosserie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC. Plast Robbiese</fullName>
            </value>
            <value>
                <fullName>Aubineau</fullName>
            </value>
            <value>
                <fullName>Cazaux</fullName>
            </value>
            <value>
                <fullName>Chereau</fullName>
            </value>
            <value>
                <fullName>Cold Car</fullName>
            </value>
            <value>
                <fullName>Coolertech</fullName>
            </value>
            <value>
                <fullName>Coolfreeze</fullName>
            </value>
            <value>
                <fullName>Coolkit</fullName>
            </value>
            <value>
                <fullName>Corsin</fullName>
            </value>
            <value>
                <fullName>ECP</fullName>
            </value>
            <value>
                <fullName>Framec Trade</fullName>
            </value>
            <value>
                <fullName>Frappa</fullName>
            </value>
            <value>
                <fullName>Grey and Adams</fullName>
            </value>
            <value>
                <fullName>Gruau</fullName>
            </value>
            <value>
                <fullName>GVS</fullName>
            </value>
            <value>
                <fullName>Honorio</fullName>
            </value>
            <value>
                <fullName>Iglocar</fullName>
            </value>
            <value>
                <fullName>Kiesling Fahrzeugbau</fullName>
            </value>
            <value>
                <fullName>Krone</fullName>
            </value>
            <value>
                <fullName>Lamberet</fullName>
            </value>
            <value>
                <fullName>Lambert</fullName>
            </value>
            <value>
                <fullName>Lecapitaine</fullName>
            </value>
            <value>
                <fullName>Marais</fullName>
            </value>
            <value>
                <fullName>Montracon</fullName>
            </value>
            <value>
                <fullName>Norpoli</fullName>
            </value>
            <value>
                <fullName>Paneltex</fullName>
            </value>
            <value>
                <fullName>Peters Koelwagens</fullName>
            </value>
            <value>
                <fullName>Ribbiocar</fullName>
            </value>
            <value>
                <fullName>Romu</fullName>
            </value>
            <value>
                <fullName>Schmitz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>