unpackaged/main/default/objects/PotentielMeubles__c/fields/MarqueHayon__c.field-meta.xml
<CustomField>
    <fullName>MarqueHayon__c</fullName>
    <label>Marque Hayon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dautel</fullName>
            </value>
            <value>
                <fullName>DEL Equipment</fullName>
            </value>
            <value>
                <fullName>Dhollandia</fullName>
            </value>
            <value>
                <fullName>Elefantcar</fullName>
            </value>
            <value>
                <fullName>Ratcliff</fullName>
            </value>
            <value>
                <fullName>Zepro</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>