unpackaged/main/default/objects/PotentielMeubles__c/fields/SousCategorieProduit__c.field-meta.xml
<CustomField>
    <fullName>SousCategorieProduit__c</fullName>
    <label>Sous-catégorie Produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MIXTE</fullName>
            </value>
            <value>
                <fullName>NEGATIF</fullName>
            </value>
            <value>
                <fullName>POSITIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>