unpackaged/main/default/objects/PotentielMeubles__c/fields/TypeCarrosserie__c.field-meta.xml
<CustomField>
    <fullName>TypeCarrosserie__c</fullName>
    <label>Type Carrosserie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>