unpackaged/main/default/objects/PotentielMeubles__c/fields/TypeEcheance__c.field-meta.xml
<CustomField>
    <fullName>TypeEcheance__c</fullName>
    <label>Type échéance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATP</fullName>
            </value>
            <value>
                <fullName>Contractuelle</fullName>
            </value>
            <value>
                <fullName>Economique</fullName>
            </value>
            <value>
                <fullName>Technique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>